--- a/system/views/login.html
+++ b/system/views/login.html
@@ -104,7 +104,7 @@
 	    	<div class="container">
                 <form action="./argument2" method="post">
                     <div class="title">
-	                        <h2>Login In</h2>
+	                        <h2>Login</h2>
 	                    </div>
                         <!--Input 1 : User id-->
                         <div class="col-sm-6">
@@ -135,7 +135,7 @@
                         <!--/ Input 2 : Activity id-->	
                     <!-- summit button-->
                     <div class="col-sm-12">
-                        <input  type="submit" class="btn btn-primary" value="送出表單"></input>
+                        <input  type="submit" class="btn btn-primary" value="進入活動"></input>
                     </div>
                     <!--/ summit button-->
 		        </form>
