--- a/system/views/argument/ChatroomPage.html
+++ b/system/views/argument/ChatroomPage.html
@@ -1,70 +1,165 @@
 <!doctype html>
 <html>
   <head>
-    <title>chatroom</title>
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
+    <title>Chatroom</title>
+
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+
+    <!-- CSS Files -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/material-kit.css" rel="stylesheet"/>
+
+    <!-- CSS Just for demo purpose, don't include it in your project -->
+    <link href="assets/css/demo.css" rel="stylesheet" />
     <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font: 13px Helvetica, Arial; }
-    form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-    form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-    form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-    #mess_bar { list-style-type: none; margin: 0; padding: 0; }
-    #mess_bar li { padding: 5px 10px; }
-    #mess_bar li:nth-child(odd) { background: #eee; }
-    #draggable { width: 50%; height: 500px; padding: 0.5em;background: #eee; }
-    #errortxt{color:rgb(255,0,0)}
-    form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+        form { background: #000; padding: 3px; bottom: 0; width: 100%; }
+        form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+        form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+        #mess_bar { list-style-type: none; margin: 0; padding: 0; }
+        #mess_bar li { padding: 5px 10px; }
+        #mess_bar li:nth-child(odd) { background: #eee; }
+        #draggable { width: 50%; height: 500px; padding: 0.5em;background: #eee; }
+        #errortxt{color:rgb(255,0,0)}
+        form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
 
     </style>
   </head>
-  <body>    
-    <h2>
-      <%=title%><%=room%> <br>使用者名稱：<%=UserName%><br>      
-    </h2>
-    <ul id="mess_bar"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
-    
-	<script src="/socket.io/socket.io.js"></script>
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<script>
-      $( function() {
-        $( "#draggable" ).resizable();
-      } );
+<body class="index-page">
 
-	  var socket = io();
-      var room_ID = '<%=room%>'
-      var UserName = '<%=UserName%>'
-	  $('form').submit(function(){
-        SendActionToSql($('#m').val());
-	    socket.emit('Push_message', UserName+': '+$('#m').val(),room_ID);
-	    $('#m').val('');
-	    return false;
-	  });
+<!-- Navbar -->
+    <nav class="navbar navbar-transparent navbar-fixed-top navbar-color-on-scroll">
+	    <div class="container">
+            <div class="navbar-header">
+	        	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
+	            	<span class="sr-only">Toggle navigation</span>
+	            	<span class="icon-bar"></span>
+	            	<span class="icon-bar"></span>
+	            	<span class="icon-bar"></span>
+	        	</button>
+				<a href="#">
+	            	<div class="logo-container">
+	                    <div class="logo">
+	                        <img src="assets/img/logo.png" alt="site Logo" rel="tooltip" title="logo" data-placement="bottom" data-html="true">
+	                    </div>
+	                    <div class="brand">
+                            Argument Sys 
+	                    </div>
 
-	  socket.on(room_ID+'_upload_message', function(msg){
-	    $('#mess_bar').append($('<li>').text(msg));
-	  });
 
-      
-	</script>
-    <script>
-    function SendActionToSql(Sentcontent){
-        $.post("http://140.115.126.216:3000/argument_post_action_list",
-            {
-                ad_id:'1',
-                t_id:<%=t_id%>,
-                content:Sentcontent
-            },
-            function(data,status){
-                console.log(status);
-            }
-        );
-		
-	}
-     
-    </script>
-  </body>
+				    </div>
+	          	</a>
+	        </div>
+
+	        <div class="collapse navbar-collapse" id="navigation-index">
+	        	<ul class="nav navbar-nav navbar-right">
+				    <li>
+					    <a href="#" target="_blank">
+						    <i class="material-icons">person_add</i> Sign up
+					    </a><!--https://material.io/icons/-->
+				    </li>
+				    <li>
+					    <a href="#" target="_blank">
+						    <i class="material-icons">group_add</i> For Group
+					    </a>
+				    </li>
+				    <li>
+					    <a rel="tooltip" title="About ours" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+						    <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
+					    </a>
+				    </li>
+				    <li>
+					    <a rel="tooltip" title="Contact ours" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+						    <i class="fa fa-question-circle"></i>
+					    </a>
+				    </li>
+				    <li>
+					    <a rel="tooltip" title="Sitting" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+						    <i class="fa fa-cog"></i>
+					    </a>
+				    </li>
+
+	        	</ul>
+	        </div>
+	    </div>
+    </nav>
+<!-- End Navbar -->    
+
+
+
+
+<div class="wrapper">
+    <div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg'); min-height:190px;height:0px;">
+		<div class="container">
+			
+
+		</div>
+	</div>
+    <div class="main main-raised">
+        <div class="section section-basic">
+            
+	        <div class="container">
+                <div class="title">  
+                    <h4>
+                      <%=title%><%=room%>/使用者名稱：<%=UserName%><br>      
+                    </h4>
+                </div>
+                <div>
+                    <form action="">
+                      <input id="m" autocomplete="off" /><button>Send</button>
+                    </form>
+                    <ul id="mess_bar"></ul>
+
+                </div>
+	        </div>
+        </div>
+    </div>
+</div>
+</body>
+<script src="/socket.io/socket.io.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
+
+  var socket = io();
+  var room_ID = '<%=room%>'
+  var UserName = '<%=UserName%>'
+  $('form').submit(function(){
+    SendActionToSql($('#m').val());
+    socket.emit('Push_message', UserName+': '+$('#m').val(),room_ID);
+    $('#m').val('');
+    return false;
+  });
+
+  socket.on(room_ID+'_upload_message', function(msg){
+    $('#mess_bar').prepend($('<li>').text(msg));
+  });
+
+  
+</script>
+<script>
+function SendActionToSql(Sentcontent){
+    $.post("http://140.115.126.216:3000/argument_post_action_list",
+        {
+            ad_id:'1',
+            t_id:<%=t_id%>,
+            content:Sentcontent
+        },
+        function(data,status){
+            console.log(status);
+        }
+    );
+	
+}
+ 
+</script>
 </html>
