--- a/system/views/argument/errorpage.html
+++ b/system/views/argument/errorpage.html
@@ -20,7 +20,7 @@
   <body>    
     <h2>
       <%=error_id%> <br>
-      error content：<%=error_con%><br>      
+      content：<%=error_con%><br>      
     </h2>
     
   </body>
