--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" href="assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Error page</title>
+	<title>Material Kit by Creative Tim</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
@@ -84,23 +84,95 @@
 <!-- End Navbar -->
 
 <div class="wrapper">
-	<div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg'); min-height:190px;height:0px;">
-		<div class="container">			
-				error page
+	<div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="brand">
+						<h1>Argument System.</h1>
+						<h3>argument platflom for student.</h3>
+					</div>
+				</div>
+			</div>
+
 		</div>
 	</div>
 
-	<div class="main main-raised">
-		<div class="section section-basic">
-<!--Main contant -->            
-	    	<div class="container">
-                
-				<h2>status: <%=error_id%></h2><br>
-				<h3>text  : <%=error_con%></h3>
-	    	</div>		
-<!--/ Main contant --> 
-	    </div>
-	 </div>
+    <div class="main main-raised">
+        <div class="section section-basic">
+            <div class="container">
+<!-- Tabs with icons on Card -->
+						<div class="card card-nav-tabs">
+							<div class="header header-primary">
+								<!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
+								<div class="nav-tabs-navigation">
+									<div class="nav-tabs-wrapper">
+										<ul class="nav nav-tabs" data-tabs="tabs">
+											<li class="active">
+												<a href="#new" data-toggle="tab">
+													<i class="material-icons">note_add</i>
+													建立活動
+												</a>
+											</li>
+											<li>
+												<a href="#chatroom" data-toggle="tab">
+													<i class="material-icons">chat</i>
+													設定活動聊天室/活動學生
+												</a>
+											</li>
+											<li>
+												<a href="#tester" data-toggle="tab">
+													<i class="material-icons">face</i>
+													安排活動學生進聊天室
+												</a>
+
+											</li>
+                                            <li>
+												<a href="#topic" data-toggle="tab">
+													<i class="material-icons">library_add</i>
+													新增題目
+												</a>
+
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="content">
+								<div class="tab-content text-center">
+									<div class="tab-pane active" id="new">
+										<p> I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. </p>
+                                        <div class="col-md-8 col-md-offset-2">
+							                <button class="btn btn-primary">建立活動</button>
+                                        </div>
+                                    </div>
+									<div class="tab-pane" id="chatroom">
+										<p> I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
+									<div class="col-md-8 col-md-offset-2">
+							                <button class="btn btn-primary">設定活動聊天室/活動學生</button>
+                                        </div>
+                                    </div>
+									<div class="tab-pane" id="tester">
+										<p>I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. So when you get something that has the name Kanye West on it, it’s supposed to be pushing the furthest possibilities. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus.</p>
+									<div class="col-md-8 col-md-offset-2">
+							                <button class="btn btn-primary">安排活動學生進聊天室</button>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane" id="topic">
+										<p>I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. So when you get something that has the name Kanye West on it, it’s supposed to be pushing the furthest possibilities. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus.</p>
+									<div class="col-md-8 col-md-offset-2">
+							                <button class="btn btn-primary">新增題目</button>
+                                        </div>
+                                    </div>
+								</div>
+							</div>
+						</div>
+<!-- End Tabs with icons on Card -->
+
+
+            </div>
+        </div>
+    </div>
 
      <footer class="footer">
 	    <div class="container">
