--- a/system/views/argument/sitting_login.html
+++ b/system/views/argument/sitting_login.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" href="assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Error page</title>
+	<title>Material Kit by Creative Tim</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
@@ -84,21 +84,54 @@
 <!-- End Navbar -->
 
 <div class="wrapper">
-	<div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg'); min-height:190px;height:0px;">
-		<div class="container">			
-				error page
+	<div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="brand">
+						<h1>Argument System.</h1>
+						<h3>argument platflom for student.</h3>
+					</div>
+				</div>
+			</div>
+
 		</div>
 	</div>
 
 	<div class="main main-raised">
 		<div class="section section-basic">
-<!--Main contant -->            
+            
 	    	<div class="container">
-                
-				<h2>status: <%=error_id%></h2><br>
-				<h3>text  : <%=error_con%></h3>
-	    	</div>		
-<!--/ Main contant --> 
+                <form action="./EnterHost" method="post">
+                    <div class="title">
+						<h2>Sitting Login</h2>
+					</div>
+                    <!--Input 1 : User id-->
+					<div class="col-sm-8">
+						<div class="input-group">
+							<span class="input-group-addon">
+								<i class="fa fa-user"></i>
+							</span>
+							<div class="form-group label-floating">
+								<label class="control-label">User ID</label>
+								<input type="text" name='host_id' class="form-control" />
+							</div>
+						</div>
+					</div>
+                    <!--/ Input 1 : User id-->	
+
+                    <!-- summit button-->
+                    <div class="col-sm-12">
+                        <input  type="submit" class="btn btn-primary" value="進入活動"></input>
+                    </div>
+                    <!--/ summit button-->
+		        </form>
+
+
+	    	</div>
+
+		
+
 	    </div>
 	 </div>
 
