--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -143,7 +143,7 @@
 									<div class="tab-pane active" id="new">
 										<p> I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. </p>
                                         <div class="col-md-8 col-md-offset-2">
-							                <button class="btn btn-primary">建立活動</button>
+							                <button class="btn btn-primary" onclick="javascript:location.href='./newactivity'">建立活動</button>
                                         </div>
                                     </div>
 									<div class="tab-pane" id="chatroom">
