--- a/system/views/argument/login.html
+++ b/system/views/argument/login.html
@@ -52,13 +52,13 @@
 	        <div class="collapse navbar-collapse" id="navigation-index">
 	        	<ul class="nav navbar-nav navbar-right">
 				    <li>
-					    <a href="#" target="_blank">
+					    <a href="./signup">
 						    <i class="material-icons">person_add</i> Sign up
 					    </a><!--https://material.io/icons/-->
 				    </li>
 				    <li>
-					    <a href="#" target="_blank">
-						    <i class="material-icons">group_add</i> For Group
+					    <a href="./login">
+						    <i class="material-icons">chat</i> Enter activity
 					    </a>
 				    </li>
 				    <li>
@@ -72,7 +72,7 @@
 					    </a>
 				    </li>
 				    <li>
-					    <a rel="tooltip" title="Sitting" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+					    <a rel="tooltip" title="Sitting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-cog"></i>
 					    </a>
 				    </li>
