api of reference show

--- a/system/views/argument/ChatroomPage.html
+++ b/system/views/argument/ChatroomPage.html
@@ -154,6 +154,7 @@
                                             </h4>
                                         </div>
                                         <div>
+                                            
                                             <form action="">
                                               <input id="m" autocomplete="off" /><button>Send</button>
                                             </form>
@@ -162,14 +163,42 @@
                                         </div>
                                     </div>
 									<div class="tab-pane" id="note">
+                                       <h4 style="text-align: left;">
+                                           筆記內容不會讓除了自己以外的其它使用者看到<br>      
+                                       </h4>
                                        <div id="noteform">
                                             <input id="m2" autocomplete="off" /><button onclick="addnote();">Send</button>
                                        </div>
                                        <ul id="note_bar"></ul>
 						            </div>
 									<div class="tab-pane" id="search">
-										<p>I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. So when you get something that has the name Kanye West on it, it’s supposed to be pushing the furthest possibilities. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus.</p>
-
+										<p>關鍵字搜尋</p>
+                                        <div class="row">
+                                        <div class="col-md-3">
+                                            <input id="keywords" autocomplete="off" /><button onclick="#">Send</button></input><br><br>
+                                            <blockquote>
+                                                 <p class="text-left">
+                                                 I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
+                                                 </p>
+                                                 <small class = "text-right">
+                                                 Kanye West, Musician
+                                                 </small>
+                                            </blockquote>
+                                            <blockquote>
+                                                 <p class="text-left">
+                                                 I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
+                                                 </p>
+                                                 <small class = "text-right">
+                                                 Kanye West, Musician
+                                                 </small>
+                                            </blockquote>
+                                        </div>
+                                        <div class="col-md-9">
+                                            <p class="text-left">
+                                                 I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
+                                             </p>
+                                        </div>
+                                        </div>
                                     </div>
                                     
 								</div>
