--- a/system/views/argument/login.html
+++ b/system/views/argument/login.html
@@ -35,7 +35,7 @@
 	            	<span class="icon-bar"></span>
 	            	<span class="icon-bar"></span>
 	        	</button>
-				<a href="#">
+				<a href="./login">
 	            	<div class="logo-container">
 	                    <div class="logo">
 	                        <img src="assets/img/logo.png" alt="site Logo" rel="tooltip" title="logo" data-placement="bottom" data-html="true">
@@ -62,12 +62,12 @@
 					    </a>
 				    </li>
 				    <li>
-					    <a rel="tooltip" title="About ours" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+					    <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
 					    </a>
 				    </li>
 				    <li>
-					    <a rel="tooltip" title="Contact ours" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+					    <a rel="tooltip" title="Contact ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-question-circle"></i>
 					    </a>
 				    </li>
