--- a/system/views/argument/newactivity.html
+++ b/system/views/argument/newactivity.html
@@ -25,7 +25,7 @@
 </head>
 
 <body class="index-page">
-    <!-- Navbar -->
+<!-- Navbar -->
     <nav class="navbar navbar-transparent navbar-fixed-top navbar-color-on-scroll">
 	    <div class="container">
             <div class="navbar-header">
@@ -35,7 +35,7 @@
 	            	<span class="icon-bar"></span>
 	            	<span class="icon-bar"></span>
 	        	</button>
-				<a href="#">
+				<a href="./login">
 	            	<div class="logo-container">
 	                    <div class="logo">
 	                        <img src="assets/img/logo.png" alt="site Logo" rel="tooltip" title="logo" data-placement="bottom" data-html="true">
@@ -52,27 +52,27 @@
 	        <div class="collapse navbar-collapse" id="navigation-index">
 	        	<ul class="nav navbar-nav navbar-right">
 				    <li>
-					    <a href="#" target="_blank">
+					    <a href="./signup">
 						    <i class="material-icons">person_add</i> Sign up
 					    </a><!--https://material.io/icons/-->
 				    </li>
 				    <li>
-					    <a href="#" target="_blank">
-						    <i class="material-icons">group_add</i> For Group
+					    <a href="./login">
+						    <i class="material-icons">chat</i> Enter activity
 					    </a>
 				    </li>
 				    <li>
-					    <a rel="tooltip" title="About ours" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+					    <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
 					    </a>
 				    </li>
 				    <li>
-					    <a rel="tooltip" title="Contact ours" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+					    <a rel="tooltip" title="Contact ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-question-circle"></i>
 					    </a>
 				    </li>
 				    <li>
-					    <a rel="tooltip" title="Sitting" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+					    <a rel="tooltip" title="Sitting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-cog"></i>
 					    </a>
 				    </li>
@@ -212,7 +212,7 @@
             function(data,status){                
                 activity_list = JSON.parse(data);
                 console.log(activity_list['text']);
-                //$('#TopicID').append('<optgroup id="y_Topics" label="your Topics">');
+                $('#TopicID').append('<optgroup id="y_Topics" label="your Topics">');
 
                 
                 for (var i = 0; i < activity_list["return"].length; i++){
