--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -148,8 +148,8 @@
                                     </div>
 									<div class="tab-pane" id="chatroom">
 										<p> I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
-									<div class="col-md-8 col-md-offset-2">
-							                <button class="btn btn-primary">設定活動聊天室/活動學生</button>
+									    <div class="col-md-8 col-md-offset-2">
+							                <button class="btn btn-primary" onclick="javascript:location.href='./newTester'">設定活動聊天室/活動學生</button>
                                         </div>
                                     </div>
 									<div class="tab-pane" id="tester">
